--- a/settings.json
+++ b/settings.json
@@ -29,12 +29,12 @@
 
         "javascript": "node",
         "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
-        "c": "vs_code_code_runner_key_mapping '$dir' 'c' '$fileName' '$fileNameWithoutExt'",
+        "c": "./vs_code_code_runner_key_mapping '$dir' 'c' '$fileName' '$fileNameWithoutExt'",
         "zig": "zig run",
-        "cpp": "vs_code_code_runner_key_mapping '$dir' 'cpp' '$fileName' '$fileNameWithoutExt'",
+        "cpp": "./vs_code_code_runner_key_mapping '$dir' 'cpp' '$fileName' '$fileNameWithoutExt'",
         "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
         "php": "php",
-        "python": "vs_code_code_runner_key_mapping '$dir' 'py' '$fileName' '$fileNameWithoutExt'",
+        "python": "./vs_code_code_runner_key_mapping '$dir' 'py' '$fileName' '$fileNameWithoutExt'",
         "perl": "perl",
         "perl6": "perl6",
         "ruby": "ruby",
